[FIX][UI] Improve light/dark navbar colors and backgrounds for better contrast.

--- a/themes/strasa/css/strasa.css
+++ b/themes/strasa/css/strasa.css
@@ -6782,11 +6782,11 @@ body.fullscreen.tiki.navbar-padding {
   background: transparent;
   border: none; }
 
-.navbar-inverse {
-  background: #214d68; }
-
 .navbar-light .navbar-nav > .active > a, .navbar-light .navbar-nav > .open > a, .navbar-light .navbar-nav > .active > a:hover, .navbar-light .navbar-nav > .open > a:hover, .navbar-light .navbar-nav > .active > a:focus, .navbar-light .navbar-nav > .open > a:focus {
   background: transparent; }
+
+.topbar .bg-dark {
+  background: transparent !important; }
 
 .navbar-fixed-top .container, .navbar-fixed-top .container .navbar-light {
   background: transparent;
